fix: Update CSS to include vendor prefixes

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 /* general */
 body {
   background: #000;
@@ -7,16 +14,28 @@ body {
 }
 
 .container {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr;
   grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr;
   grid-template-rows: 1fr;
+}
+
+.container > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
 }
 
 /* hero */
 
 .hero-img {
   width: 100%;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1/2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
   grid-row: 1/2;
 }
 
@@ -25,10 +44,16 @@ body {
 }
 
 .hero-container {
+  display: -ms-grid;
   display: grid;
   place-items: center;
-  align-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1/2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
   grid-row: 1/2;
 }
 
@@ -43,6 +68,8 @@ body {
 /* btn */
 .btn {
   color: #393d46;
+  background: -webkit-gradient(linear, left top, left bottom, from(#bbbbbb), to(#e2e2e2));
+  background: -o-linear-gradient(top, #bbbbbb, #e2e2e2);
   background: linear-gradient(to bottom, #bbbbbb, #e2e2e2);
   border: 1px solid #f7f7f6;
   letter-spacing: 2px;
@@ -50,11 +77,17 @@ body {
   width:  200px;
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
+  -webkit-transition: all .2s;
+  -o-transition: all .2s;
   transition: all .2s;
   position: relative;
   overflow: hidden;
   display: block;
+  -webkit-transition: background-color 0.2s ease-out, -webkit-box-shadow 0.2s ease-out, -webkit-transform 0.2s ease-out;
+  transition: background-color 0.2s ease-out, -webkit-box-shadow 0.2s ease-out, -webkit-transform 0.2s ease-out;
+  -o-transition: box-shadow 0.2s ease-out, background-color 0.2s ease-out, transform 0.2s ease-out;
   transition: box-shadow 0.2s ease-out, background-color 0.2s ease-out, transform 0.2s ease-out;
+  transition: box-shadow 0.2s ease-out, background-color 0.2s ease-out, transform 0.2s ease-out, -webkit-box-shadow 0.2s ease-out, -webkit-transform 0.2s ease-out;
 }
 
 .btn:before {
@@ -67,17 +100,22 @@ body {
   padding-top: 0;
   border-radius: 100%;
   background-color: #e3e3e398;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .btn:active:before {
   width: 120%;
   padding-top: 120%;
+  -webkit-transition: width 0.2s ease-out, padding-top 0.2s ease-out;
+  -o-transition: width 0.2s ease-out, padding-top 0.2s ease-out;
   transition: width 0.2s ease-out, padding-top 0.2s ease-out;
 }
 
 .btn:hover {
-  box-shadow: 0 0 6px 2px rgb(255, 255, 255);
+  -webkit-box-shadow: 0 0 6px 2px rgb(255, 255, 255);
+          box-shadow: 0 0 6px 2px rgb(255, 255, 255);
 }
 
 /* modal */
